Added back final on equipment_1e8 and items_2e9